# ChangeLog for gnome-extra/gtkhtml
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gtkhtml/ChangeLog,v 1.189 2009/06/08 22:16:10 eva Exp $

  08 Jun 2009; Gilles Dartiguelongue <eva@gentoo.org> gtkhtml-3.26.2.ebuild:
  Set GCONF_DEBUG=no, bug #268745.

  08 Jun 2009; Gilles Dartiguelongue <eva@gentoo.org> gtkhtml-3.24.5.ebuild:
  Set WANT_AUTOMAKE and add gnome-common to DEPEND, bug #272845.

*gtkhtml-3.26.2 (18 May 2009)

  18 May 2009; Gilles Dartiguelongue <eva@gentoo.org>
  +gtkhtml-3.26.2.ebuild:
  Bump to 3.26.2. Bug fixes and translation updates.

  03 May 2009; Gilles Dartiguelongue <eva@gentoo.org>
  -files/gtkhtml-3.0.10-no-extern-cluealigned.diff,
  -files/gtkhtml-3.2-gi18n.patch, -files/gtkhtml-3.2-i18n.patch,
  -files/gtkhtml-3.6.2-fbsd.patch,
  -files/gtkhtml-3.14.3-get_left_margin-fix.patch:
  Clean up orphaned patches.

*gtkhtml-3.26.1.1 (03 May 2009)

  03 May 2009; Gilles Dartiguelongue <eva@gentoo.org>
  +files/gtkhtml-editor.xml, -gtkhtml-3.2.5.ebuild, -gtkhtml-3.6.2.ebuild,
  -gtkhtml-3.16.3.ebuild, -gtkhtml-3.18.3.ebuild, -gtkhtml-3.24.1.1.ebuild,
  -gtkhtml-3.24.2.ebuild, -gtkhtml-3.24.3.ebuild, -gtkhtml-3.24.4.ebuild,
  +gtkhtml-3.26.1.1.ebuild:
  New version for GNOME 2.26. Bug fixes and translation updates.
  Clean up old releases and kill unused slots.

  28 Apr 2009; Raúl Porcel <armin76@gentoo.org> gtkhtml-3.18.3.ebuild:
  arm/sh stable

  27 Apr 2009; Jeroen Roovers <jer@gentoo.org> gtkhtml-3.24.5:
  Stable for HPPA (bug #260063).

  27 Apr 2009; Raúl Porcel <armin76@gentoo.org> gtkhtml-3.24.5.ebuild:
  arm stable

  12 Apr 2009; Friedrich Oslage <bluebird@gentoo.org> gtkhtml-3.24.5.ebuild:
  Stable on sparc, bug #260063

  18 Mar 2009; Raúl Porcel <armin76@gentoo.org> gtkhtml-3.24.5.ebuild:
  alpha/ia64 stable wrt #260063

  15 Mar 2009; Markus Meier <maekke@gentoo.org> gtkhtml-3.24.5.ebuild:
  x86 stable, bug #260063
