@@ -2,8 +2,10 @@ AUX gtkhtml-editor.xml 1035 RMD160 2809f2569ed25df3607102fdee641777adc443dc SHA1
 DIST gtkhtml-3.24.5.tar.bz2 1473717 RMD160 fc81498abe3cf9f9ca58cb29403921d4e70cbf18 SHA1 4927df0adf6b9760d98b7777c60a01a63d870425 SHA256 b6ae7311b9412030649cbfc9b3ed240842343e95bf52c4c99069b14192128079
 DIST gtkhtml-3.26.1.1.tar.bz2 1499057 RMD160 ee022311dd9137b87365b50b4f2b4789401f7cd8 SHA1 b8538e94f6ffb43059131684bd1929a751d7b13e SHA256 8a53eaf4e040fc93695543b82ca676b02c33b5bfc50ef498ebcaf8305d548e61
 DIST gtkhtml-3.26.2.tar.bz2 1486870 RMD160 b062860e9bcff2ae7ebae7f353a3cd00dbaa3079 SHA1 292e67b2263bf1c449480ba4b14843f1a101ec24 SHA256 8a0ac863af4c3455455edf0e3c063fa79385806bdfb79ab2a209ea7336161b07
+DIST gtkhtml-3.26.3.tar.bz2 1487455 RMD160 a994250236abd2def6c94cc7703ef161269c5445 SHA1 4b681e763c5801adf8d083ff80ef4332f48935f6 SHA256 e700a1d57522d63987d27c1b4f0b1b3936a13471d61873c5f77c4535dbfd63eb
 EBUILD gtkhtml-3.24.5.ebuild 1868 RMD160 ae38de3e8d84606981acf71c54329a4d3233239e SHA1 f3905b2b0dbdc7af544197f3b24bad517d29c791 SHA256 ab06983ca789ce70f58db7a49288fbf33fc0ee0b2710bed302dec56bfbdda7de
 EBUILD gtkhtml-3.26.1.1.ebuild 1874 RMD160 c26c2190765e65d2e03b47ad3d49559c77c6914d SHA1 074d82301c2023e78c6c81accd78b3f7ffb4ff0b SHA256 7e3b9906b5f2754e3990c8475054fa8420dead62f6bcdcdbe4151acc29844971
 EBUILD gtkhtml-3.26.2.ebuild 1827 RMD160 b4bb3348877ef0b94a90eefceb9de48f9b1e22b6 SHA1 339390e6e5507425431169c11834f97e6853c140 SHA256 770d6baef1de777d9ed31d37542a8c89d15f97ee974a8c1b117065745af682dd
-MISC ChangeLog 26571 RMD160 213cf15b40ec4c892f16a388232e2d78c1fcb511 SHA1 797b7568c51670321d5e3a9571968223ee367dfc SHA256 d904e0d079f7a309103047515e108283d81ade38e4e4861381b45664ec31a186
+EBUILD gtkhtml-3.26.3.ebuild 1729 RMD160 ee5ecfe7c41ebf34944063b3c4b93219f18d1988 SHA1 901161a20588e53e2929c9d6a61195daba518dff SHA256 932ebc5d541c16806c39c02e54b0caede399a3697001271f54e46f37e65f5190
+MISC ChangeLog 26770 RMD160 85fdfe312d8d0efd7c810841942da165d8d38936 SHA1 ad082f980b5b37ae24955622f00b3003f898c495 SHA256 fae6136073ed9e04d94e4c107ba943cdc502edf488026541bb39bccc589c1aff
 MISC metadata.xml 250 RMD160 4e46249cd3426e09b6f462c29ea489724464f51c SHA1 96ab3cf6c39bb44e33d788425a99ddd337a31eeb SHA256 86cd2180b3599ddb2bef78131a9c86a37fa1ee7247aa3245e11e7ff6a239e2e0
